fix: inner html is unescaped after styling

--- a/sample.html
+++ b/sample.html
@@ -167,6 +167,8 @@
             <ul>
               <li>这么点困难就能把我们吓倒吗？！</p></li>
             </ul>
+            <p>&lt;script啊&quot法alert("aaa！？");&lt;/script&gt;
+            </p>
           </li>
         </ol>
       </div>
